--- a/.github/workflows/new1.yml
+++ b/.github/workflows/new1.yml
@@ -31,4 +31,4 @@ jobs:
     - name: Installing surge
       run: npm install -g surge
     - name: deploying using surge
-      run: surge ./ http://bootcamp_2020-08-17.surge.sh --token $ {{ secrets.SURGE_TOKEN }}
+      run: surge ./ bootcamp_2020-08-17.surge.sh --token $ {{ secrets.SURGE_TOKEN }}
